Add /users handlers
